# lecture13

./: CMakeLists.txt  Makefile  README.md
include/needle/: cuda_ops.h  device_api.h  dlpack.h  logging.h  ndarray.h
python/needle/: __init__.py  backend_ndarray.py  cuda_backend.py
python/needle/_ffi/: __init__.py
python/pybind/: main.cc
src/: cpu_device_api.cc  cuda_device_api.cc  cuda_ops.cu  device_api.cc  device_api_internal.h  ndarray.cc
